--- a/style.CSS
+++ b/style.CSS
@@ -1631,6 +1631,7 @@ main > .sec-7 > .marquee-wrapper > .marquee-box > .news-pages > .img-container {
 main > .sec-7 > .marquee-wrapper > .marquee-box > .news-pages > .img-container > img {
   width: 100%;
   height: 100%;
+  object-fit: var(--object-cover);
   transition: all 0.3s ease-in-out;
 }
 
@@ -1727,7 +1728,7 @@ main > .banner > .banner-wrapper > a > span:hover {
 main > .sec-8 {
   width: 100%;
   height: 100%;
-  min-height: 100dvh;
+  min-height: var(--minHeight--block-system);
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -1744,7 +1745,7 @@ main > .sec-8 > .img-container {
 main > .sec-8 > .img-container > img {
   width: 100%;
   height: 100%;
-  min-height: 100dvh;
+  min-height: var(--minHeight--block-system);
   object-fit: cover;
 }
 
@@ -1793,10 +1794,12 @@ main > .sec-8 > .text-container > .contact-box > .arrow-wrapper:hover > img {
 /* footer --------------------------------------------------------------- */
 footer {
   width: 100%;
-  height: 35rem;
+  height: 100%;
+  max-height: 35rem;
   padding: 4.8rem 0;
   background-color: var(--main-color-gray);
   box-sizing: border-box;
+  white-space: nowrap;
 }
 
 footer > .btn-wrap {
@@ -1814,10 +1817,12 @@ footer > .btn-wrap > .logo-box > a {
   display: flex;
   width: 19rem;
   overflow: hidden;
+  box-sizing: border-box;
 }
 
 footer > .btn-wrap > .logo-box > a > img {
-  object-fit: cover;
+  width: 100%;
+  object-fit: var(--object-cover);
   pointer-events: none;
 }
 
@@ -1964,6 +1969,16 @@ footer > .ft-bottom-wrapper > .ft-bottom-box > .bottom-leftover > .ft-bottom-mar
   align-items: center;
   justify-content: center;
   gap: 3.6rem;
+}
+
+footer > .ft-bottom-wrapper > .ft-bottom-box > .bottom-leftover > .ft-bottom-marks .mark {
+  overflow: hidden;
+  box-sizing: border-box;
+}
+
+footer > .ft-bottom-wrapper > .ft-bottom-box > .bottom-leftover > .ft-bottom-marks .mark > img {
+  width: 100%;
+  object-fit: cover;
 }
 /* @medias wrapper --------------------------------------------------------------- */
 @media screen and (max-width: 768px) {
@@ -2127,6 +2142,38 @@ footer > .ft-bottom-wrapper > .ft-bottom-box > .bottom-leftover > .ft-bottom-mar
     justify-content: center;
     align-items: center;
     gap: 0.6rem;
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  footer {
+    text-align: center;
+    max-height: none;
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  footer > .btn-wrap .logo-box {
+    justify-content: center;
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  footer > .btn-wrap .btn {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  footer > .ft-bottom-wrapper > .ft-bottom-box > .ft-menu-box ul {
+    justify-content: center;
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  footer > .ft-bottom-wrapper > .ft-bottom-box > .bottom-leftover {
+    justify-content: center;
+    flex-direction: column;
   }
 }
 /* @keyframes wrapper --------------------------------------------------------------- */
