--- a/style.CSS
+++ b/style.CSS
@@ -1,3 +1,38 @@
+/* Add on Font ------------------------------------------------------------ */
+@font-face {
+    font-family: 'Pretendard';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/pretendard@1.0/Pretendard-Regular.woff2') format('woff2');
+    font-weight: 400;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Pretendard';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/pretendard@1.0/Pretendard-Medium.woff2') format('woff2');
+    font-weight: 500;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Pretendard';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/pretendard@1.0/Pretendard-SemiBold.woff2') format('woff2');
+    font-weight: 600;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Pretendard';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/pretendard@1.0/Pretendard-Bold.woff2') format('woff2');
+    font-weight: 700;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Pretendard';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/pretendard@1.0/Pretendard-ExtraBold.woff2') format('woff2');
+    font-weight: 800;
+    font-display: swap;
+}
 /* Normalize ------------------------------------------------------------ */
 body,
 ul,
@@ -29,7 +64,7 @@ html {
 }
 
 html body {
-  font-family: "Pretendard";
+  font-family: 'Pretendard', sans-serif;
   overflow-x: hidden;
   position: relative;
   height: auto;
@@ -1977,7 +2012,7 @@ footer > .ft-bottom-wrapper > .ft-bottom-box > .bottom-leftover > .ft-info-conta
   gap: 1.2rem;
 }
 
-footer > .ft-bottom-wrapper > .ft-bottom-box > .bottom-leftover > .ft-info-container > .address-box > #between-liner {
+footer > .ft-bottom-wrapper > .ft-bottom-box > .bottom-leftover > .ft-info-container > .address-box > .between-liner {
   width: 0.2rem;
   height: 1.6rem;
   background-color: rgba(248, 249, 250, 0.5);
@@ -2250,7 +2285,7 @@ footer > .ft-bottom-wrapper > .ft-bottom-box > .bottom-leftover > .ft-bottom-mar
 }
 
 @media screen and (max-width: 768px) {
-  footer > .ft-bottom-wrapper > .ft-bottom-box > .bottom-leftover > .ft-info-container > .address-box > #between-liner {
+  footer > .ft-bottom-wrapper > .ft-bottom-box > .bottom-leftover > .ft-info-container > .address-box > .between-liner {
     display: none;
   }
 }
