--- a/style.CSS
+++ b/style.CSS
@@ -610,6 +610,7 @@ main {
 }
 /* main > tab-aside --------------------------------------------------------------- */
 .tab-aside {
+  box-sizing: border-box;
   position: fixed;
   top: 0;
   right: 0;
@@ -619,11 +620,10 @@ main {
   width: 50%;
   height: 100dvh;
   padding: 4.8rem calc(4.8rem * 1.2);
-  display: flex;
   flex-direction: column;
   gap: 4.8rem;
   color: #fff;
-  transform: translateX(0%);
+  transform: translateX(0);
   transition: transform 1s ease;
 }
 
@@ -703,8 +703,8 @@ main {
 main > .sec-1 {
   width: 100%;
   height: 100%;
-  position: relative;
   min-height: var(--minHeight--block-system);
+  position: relative;
 }
 
 main > .sec-1 > .swiper {
@@ -829,6 +829,53 @@ main > .sec-1 > .text-container > .custom-pagination > .current,
   display: flex;
   justify-content: center;
   align-items: center;
+}
+/* main > sec-responsive --------------------------------------------------------------- */
+.sec-responsive {
+  display: none;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  cursor: default;
+  z-index: 6;
+}
+
+.sec-responsive > .content-wrap {
+  width: 100%;
+  height: 100%;
+}
+
+.sec-responsive > .content-wrap > .bg-container {
+  overflow: hidden;
+  box-sizing: border-box;
+}
+
+.sec-responsive > .content-wrap > .bg-container > img {
+  width: 100%;
+  height: auto;
+  object-fit: var(--object-cover);
+  filter: brightness(0.5);
+}
+
+.sec-responsive > .content-wrap > .text-box {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 12rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: var(--color-white);
+}
+
+.sec-responsive > .content-wrap > .text-box > .sec-responsive-text {
+  font-weight: 600;
+  font-size: clamp(24px, 3.5vw, 72px);
+  line-height: 1.5;
+  white-space: nowrap;
 }
 /* main > sec-2 --------------------------------------------------------------- */
 .sec-2 {
@@ -1689,11 +1736,12 @@ main > .sec-6 > .top-box > .search-wrap img {
   justify-content: center;
   color: var(--main-color-gray);
   padding: var(--margin-grid-system);
-  overflow: visible;
+  overflow: hidden;
 }
 
 .goods-slider .goods-box {
-  width: 53rem;
+  width: 100%;
+  max-width: 53rem;
   height: 52rem;
   flex: 1 0 0;
   display: flex;
@@ -2044,7 +2092,7 @@ main > .banner > .banner-wrapper > a {
 }
 
 main > .banner > .banner-wrapper > a > span {
-  font-size: 1.8rem;
+  font-size: clamp(12px, 1.5vw, 1.8rem);
   font-weight: 800;
   border-radius: 3.6rem;
   padding: 1.4rem 4.2rem;
@@ -2408,6 +2456,12 @@ footer
 }
 
 @media screen and (max-width: 1280px) {
+  main {
+    width: 100vw;
+  }
+}
+
+@media screen and (max-width: 1280px) {
   main > .sec-1 {
     text-align: center;
     min-width: 50rem;
@@ -2425,6 +2479,12 @@ footer
 @media screen and (max-width: 1280px) {
   main > .sec-1 > .text-container > .text-en > img {
     display: none;
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  main > .sec-responsive {
+    display: block;
   }
 }
 
