--- a/style.CSS
+++ b/style.CSS
@@ -73,7 +73,6 @@ html body {
   max-width: 100%;
   overflow-x: hidden;
   position: relative;
-  height: auto;
 }
 
 header,
@@ -103,6 +102,33 @@ img {
   --object-contain: contain;
 }
 /* Customize --------------------------------------------------------------- */
+.loading-page {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100dvh;
+  z-index: 1000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--color-black);
+  pointer-events: all;
+}
+
+.loading-page > .logo-box {
+  width: 76.5rem;
+  height: 22.5rem;
+  overflow: hidden;
+  box-sizing: border-box;
+}
+
+.loading-page > .logo-box > img {
+  width: 100%;
+  object-fit: cover;
+  transform: scale(0.75);
+}
+
 .top-btn {
   padding: 1.8rem 1.2rem;
   position: absolute;
@@ -621,7 +647,6 @@ main {
   height: 100dvh;
   padding: 4.8rem calc(4.8rem * 1.2);
   flex-direction: column;
-  gap: 4.8rem;
   color: #fff;
   transform: translateX(0);
   transition: transform 1s ease;
@@ -636,6 +661,7 @@ main {
   width: 100%;
   display: flex;
   justify-content: flex-end;
+  margin-bottom: 4.8rem;
 }
 
 .tab-aside > .close-btn-container > .close-btn {
